--- a/LoRA/scripts/prueba.ipynb
+++ b/LoRA/scripts/prueba.ipynb
@@ -1,20 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f91fc91",
+   "cell_type": "markdown",
+   "id": "4eca3baa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# By this way, ChronosConfig is read from src/chronos\n",
-    "import sys\n",
-    "sys.path.append('./src')"
+    "## Chronos & LoRA: Learning fine details efficiently :)\n",
+    "Before executing the fine-tuning algorithm, let's set up our environment following these steps:\n",
+    "1. Create a Python vitual environment: `python -m venv [name of the environment]`\n",
+    "2. Open a terminal at the root of this project and run `pip install --editable \".[training]\"` which allows you to install in editable mode with extra training-related dependencies of the Chronos repository\n",
+    "3. Install PEFT (Parameter-Efficient Fine-Tuning) for supporting LoRA: `pip install peft`\n",
+    "4. Move to the folder scripts, and run `python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5f2ffa0a",
    "metadata": {
     "vscode": {
@@ -23,15 +24,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "d:\\TODO\\PoliTo\\SEMESTRES\\Segundo año\\Deep Natural Language Processing\\Project\\DeepNLP_Forecasting\\LoRA\\LoRAenv\\Lib\\site-packages\\gluonts\\json.py:102: UserWarning: Using `json`-module for json-handling. Consider installing one of `orjson`, `ujson` to speed up serialization and deserialization.\n",
+      "  warnings.warn(\n",
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"d:\\TODO\\PoliTo\\SEMESTRES\\Segundo año\\Deep Natural Language Processing\\Project\\DeepNLP_Forecasting\\LoRA\\scripts\\training\\train.py\"\u001b[0m, line \u001b[35m47\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    from chronos import ChronosConfig, ChronosTokenizer\n",
+      "\u001b[1;35mModuleNotFoundError\u001b[0m: \u001b[35mNo module named 'chronos'\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml\n"
+    "!python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml"
    ]
   },
   {
@@ -49,7 +55,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "LoRAenv",
    "language": "python",
    "name": "python3"
   },
