LoRA: Readme for setting up the primitve environment for fine-tuning

--- a/LoRA/scripts/prueba.ipynb
+++ b/LoRA/scripts/prueba.ipynb
@@ -6,11 +6,30 @@
    "metadata": {},
    "source": [
     "## Chronos & LoRA: Learning fine details efficiently :)\n",
-    "Before executing the fine-tuning algorithm, let's set up our environment following these steps:\n",
-    "1. Create a Python vitual environment: `python -m venv [name of the environment]`\n",
-    "2. Open a terminal at the root of this project and run `pip install --editable \".[training]\"` which allows you to install in editable mode with extra training-related dependencies of the Chronos repository\n",
-    "3. Install PEFT (Parameter-Efficient Fine-Tuning) for supporting LoRA: `pip install peft`\n",
-    "4. Move to the folder scripts, and run `python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml`\n"
+    "Before diving into fine-tuning, let's get your environment ready with the following steps:\n",
+    "1. **Create a Python virtual environment:**\n",
+    "    <pre>\n",
+    "    `python -m venv [name of the environment]`\n",
+    "    </pre>\n",
+    "2. Open a terminal inside the LoRA folder (located within the repository), and install Chronos in editable mode with training dependencies:\n",
+    "    <pre>\n",
+    "    `pip install --editable \".[training]\"`\n",
+    "    </pre>\n",
+    "3. **Install PEFT (Parameter-Efficient Fine-Tuning)** to enable LoRA support: \n",
+    "    <pre>\n",
+    "    `pip install peft`\n",
+    "    </pre>\n",
+    "4. **Install the CUDA-enabled version of PyTorch** to leverage GPU acceleration (if available): \n",
+    "    - If you are on **Windows 11** with an NVIDIA GPU: \n",
+    "    <pre>\n",
+    "        `pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128`\n",
+    "    </pre>\n",
+    "    - On other platforms, please visit the [official PyTorch install guide](https://pytorch.org/get-started/locally/) to find the right command for your system\n",
+    "5. **Start fine-tuning:** Navigate to the scripts folder and run:\n",
+    "`python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml`.\n",
+    "    <pre>\n",
+    "   This command uses the configuration specified in: `./training/configs/chronos-t5-small-lora.yaml`\n",
+    "    </pre>"
    ]
   },
   {
