--- a/LoRA/scripts/prueba.ipynb
+++ b/LoRA/scripts/prueba.ipynb
@@ -61,13 +61,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dab86813",
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\TODO\\PoliTo\\YEARS\\Second year\\Deep Natural Language Processing\\Project\\DeepNLP_Forecasting\\LoRA\\LoRAenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "import datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aeb3cdc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'timestamp', 'target'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds = datasets.load_dataset(\"autogluon/chronos_datasets\", \"monash_australian_electricity\", split=\"train\")\n",
+    "ds.set_format(\"numpy\")  # sequences returned as numpy arrays\n",
+    "ds[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "21ffba97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'T000000',\n",
+       " 'timestamp': array(['2002-01-01T00:00:00.000', '2002-01-01T00:30:00.000',\n",
+       "        '2002-01-01T01:00:00.000', ..., '2015-02-28T22:30:00.000',\n",
+       "        '2015-02-28T23:00:00.000', '2015-02-28T23:30:00.000'],\n",
+       "       dtype='datetime64[ms]'),\n",
+       " 'target': array([5714.045 , 5360.189 , 5014.835 , ..., 5749.3555, 5505.216 ,\n",
+       "        5356.356 ], dtype=float32)}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bc60ac",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
