--- a/LoRA/scripts/prueba.ipynb
+++ b/LoRA/scripts/prueba.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "21ffba97",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "        5356.356 ], dtype=float32)}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +130,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "98bc60ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gluonts.dataset.arrow import ArrowWriter\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93b9d971",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('d:/TODO/PoliTo/YEARS/Second year/Deep Natural Language Processing/Project/DeepNLP_Forecasting/LoRA/scripts')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Path.cwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f16be24f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ArrowWriter(compression=\"lz4\").write_to_file(\n",
+    "        ds,\n",
+    "        path=Path.cwd()/ \"example.arrow\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c69dcbc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'kernel_synth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkernel_synth\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generate_time_series\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'kernel_synth'"
+     ]
+    }
+   ],
+   "source": [
+    "from kernel_synth import generate_time_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b19611b0",
    "metadata": {},
    "outputs": [],
    "source": []
