LoRA: File for setting up the datasets for ft done

--- a/LoRA/scripts/set-up-datasets.ipynb
+++ b/LoRA/scripts/set-up-datasets.ipynb
@@ -2,39 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4eca3baa",
+   "id": "5f03ea35",
    "metadata": {},
    "source": [
-    "## Chronos & LoRA: Learning fine details efficiently :)\n",
-    "Before diving into fine-tuning, let's get your environment ready with the following steps:\n",
-    "1. **Create a Python virtual environment:**\n",
-    "    <pre>\n",
-    "    `python -m venv [name of the environment]`\n",
-    "    </pre>\n",
-    "2. Open a terminal inside the LoRA folder (located within the repository), and install Chronos in editable mode with training dependencies:\n",
-    "    <pre>\n",
-    "    `pip install --editable \".[training]\"`\n",
-    "    </pre>\n",
-    "3. **Install PEFT (Parameter-Efficient Fine-Tuning)** to enable LoRA support: \n",
-    "    <pre>\n",
-    "    `pip install peft`\n",
-    "    </pre>\n",
-    "4. **Install the CUDA-enabled version of PyTorch** to leverage GPU acceleration (if available): \n",
-    "    - If you are on **Windows 11** with an NVIDIA GPU: \n",
-    "    <pre>\n",
-    "        `pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128`\n",
-    "    </pre>\n",
-    "    - On other platforms, please visit the [official PyTorch install guide](https://pytorch.org/get-started/locally/) to find the right command for your system\n",
-    "5. **Start fine-tuning:** Navigate to the scripts folder and run:\n",
-    "`python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml`.\n",
-    "    <pre>\n",
-    "   This command uses the configuration specified in: `./training/configs/chronos-t5-small-lora.yaml`\n",
-    "    </pre>"
+    "If you want to follow the following notebook, it is not enough with following the steps described at \"README for fine-tuning\", you need to install autogluon following the instructions on its web: https://auto.gluon.ai/stable/install.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dab86813",
    "metadata": {},
    "outputs": [
@@ -42,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\TODO\\PoliTo\\YEARS\\Second year\\Deep Natural Language Processing\\Project\\DeepNLP_Forecasting\\LoRA\\LoRAenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "d:\\apps\\envs\\LoRAenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -50,94 +26,165 @@
    "source": [
     "import datasets\n",
     "from gluonts.dataset.arrow import ArrowWriter\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from typing import Any"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "3223e23f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_chronos_format(dataset: datasets.arrow_dataset.Dataset, t = None):\n",
-    "    import numpy as np\n",
-    "    return dataset.map(lambda ts: \n",
+    "def to_training_chronos_format(dataset: datasets.arrow_dataset.Dataset, H: int | Any = None):\n",
+    "    return dataset.map(\n",
+    "        lambda ts: \n",
     "                {'start': str(ts['timestamp'][0]), \n",
-    "                 'target': ts['target'][:t]\n",
+    "                 'target': ts['target'][:-H]\n",
     "                 }, \n",
     "                 remove_columns=['id', 'timestamp'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "aeb3cdc3",
+   "execution_count": 3,
+   "id": "e9a9cd9c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Dataset({\n",
+       "[Dataset({\n",
        "     features: ['id', 'timestamp', 'target'],\n",
-       "     num_rows: 5\n",
+       "     num_rows: 72\n",
        " }),\n",
-       " datasets.arrow_dataset.Dataset)"
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 2674\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 767\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 107\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 8\n",
+       " })]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "monash_australian_electricity_ds = datasets.load_dataset(\"autogluon/chronos_datasets\", \"monash_australian_electricity\", split=\"train\")\n",
-    "monash_australian_electricity_ds.set_format(\"numpy\")  # sequences returned as numpy arrays\n",
-    "monash_australian_electricity_ds, type(monash_australian_electricity_ds)"
+    "path = \"autogluon/chronos_datasets\"\n",
+    "datasets_with_horizons = [\n",
+    "                {'name': 'monash_cif_2016', 'H': 12},\n",
+    "                {'name': 'monash_car_parts', 'H': 12},\n",
+    "                {'name': 'monash_hospital', 'H': 12},\n",
+    "                {'name': 'monash_fred_md', 'H': 12},\n",
+    "                {'name': 'exchange_rate', 'H': 30}\n",
+    "                ]\n",
+    "datasets_for_finetuning = [datasets.load_dataset(path=path, name=ds['name'], split='train') for ds in datasets_with_horizons]\n",
+    "datasets_for_finetuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "415380ac",
+   "execution_count": 4,
+   "id": "c2d3c4b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ds in datasets_for_finetuning:\n",
+    "    ds.set_format('numpy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56574a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_schema = datasets.Features({\n",
+    "    \"start\": datasets.Value(\"string\"),\n",
+    "    \"target\": datasets.Sequence(datasets.Value(\"float64\"))\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "37b10305",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 5/5 [00:00<00:00, 127.94 examples/s]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Dataset({\n",
-       "    features: ['target', 'start'],\n",
-       "    num_rows: 5\n",
-       "})"
+       "[Dataset({\n",
+       "     features: ['target', 'start'],\n",
+       "     num_rows: 72\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['target', 'start'],\n",
+       "     num_rows: 2674\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['target', 'start'],\n",
+       "     num_rows: 767\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['target', 'start'],\n",
+       "     num_rows: 107\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['target', 'start'],\n",
+       "     num_rows: 8\n",
+       " })]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "monash_australian_electricity_ds_for_chronos = to_chronos_format(monash_australian_electricity_ds, 128)\n",
-    "monash_australian_electricity_ds_for_chronos"
+    "datasets_for_finetuning = list(map(\n",
+    "    lambda ds, ds_conf: to_training_chronos_format(ds, ds_conf['H']), \n",
+    "    datasets_for_finetuning, \n",
+    "    datasets_with_horizons))\n",
+    "datasets_for_finetuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "id": "d1d15b81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#datasets_for_finetuning = datasets.concatenate_datasets(datasets_for_finetuning)\n",
+    "datasets_for_finetuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f16be24f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ArrowWriter(compression=\"lz4\").write_to_file(\n",
-    "        monash_australian_electricity_ds_for_chronos,\n",
-    "        path=Path.cwd()/ \"example.arrow\",\n",
+    "for ds, ds_conf in zip(datasets_for_finetuning, datasets_with_horizons):\n",
+    "    ArrowWriter(compression=\"lz4\").write_to_file(\n",
+    "        ds,\n",
+    "        path=Path.cwd()/ \"training\" / \"data\" / f\"{ds_conf['name']}.arrow\",\n",
     "    )"
    ]
   },
@@ -146,26 +193,7 @@
    "execution_count": null,
    "id": "9518ce24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml"
    ]
@@ -173,7 +201,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7783e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets_for_finetuning[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9d886b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "prueba = pd.DataFrame({'item_id': [0 for i in range(10)], \n",
+    "                       'timestamp': ['1970-01-31', '1970-02-28', '1970-03-31', '1970-04-30', '1970-05-31', \n",
+    "                                     '1972-04-30', '1972-05-31', '1972-06-30', '1972-07-31', '1972-08-31'], \n",
+    "                       'target': [76, 54, 32,56,43,11,37,41,75, 90]})\n",
+    "prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "44de543c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prueba = TimeSeriesDataFrame.from_data_frame(prueba)\n",
+    "prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cdef192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = prueba.train_test_split(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198316db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2156c1e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd94cb93",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
