--- a/LoRA/scripts/set-up-datasets.ipynb
+++ b/LoRA/scripts/set-up-datasets.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "dab86813",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\apps\\envs\\LoRAenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datasets\n",
     "from gluonts.dataset.arrow import ArrowWriter\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "3223e23f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "e9a9cd9c",
    "metadata": {},
    "outputs": [
@@ -74,10 +65,22 @@
        " Dataset({\n",
        "     features: ['id', 'timestamp', 'target'],\n",
        "     num_rows: 8\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 266\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 862\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['id', 'timestamp', 'target'],\n",
+       "     num_rows: 1428\n",
        " })]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +92,10 @@
     "                {'name': 'monash_car_parts', 'H': 12},\n",
     "                {'name': 'monash_hospital', 'H': 12},\n",
     "                {'name': 'monash_fred_md', 'H': 12},\n",
-    "                {'name': 'exchange_rate', 'H': 30}\n",
+    "                {'name': 'exchange_rate', 'H': 30},\n",
+    "                {'name': 'monash_covid_deaths', 'H': 30},\n",
+    "                {'name': 'monash_traffic', 'H': 24},\n",
+    "                {'name': 'monash_m3_monthly', 'H': 18},\n",
     "                ]\n",
     "datasets_for_finetuning = [datasets.load_dataset(path=path, name=ds['name'], split='train') for ds in datasets_with_horizons]\n",
     "datasets_for_finetuning"
@@ -97,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "c2d3c4b4",
    "metadata": {},
    "outputs": [],
@@ -108,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a56574a1",
    "metadata": {},
    "outputs": [],
@@ -121,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "37b10305",
    "metadata": {},
    "outputs": [
@@ -129,35 +135,47 @@
      "data": {
       "text/plain": [
        "[Dataset({\n",
-       "     features: ['target', 'start'],\n",
+       "     features: ['start', 'target'],\n",
        "     num_rows: 72\n",
        " }),\n",
        " Dataset({\n",
-       "     features: ['target', 'start'],\n",
+       "     features: ['start', 'target'],\n",
        "     num_rows: 2674\n",
        " }),\n",
        " Dataset({\n",
-       "     features: ['target', 'start'],\n",
+       "     features: ['start', 'target'],\n",
        "     num_rows: 767\n",
        " }),\n",
        " Dataset({\n",
-       "     features: ['target', 'start'],\n",
+       "     features: ['start', 'target'],\n",
        "     num_rows: 107\n",
        " }),\n",
        " Dataset({\n",
-       "     features: ['target', 'start'],\n",
+       "     features: ['start', 'target'],\n",
        "     num_rows: 8\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['start', 'target'],\n",
+       "     num_rows: 266\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['start', 'target'],\n",
+       "     num_rows: 862\n",
+       " }),\n",
+       " Dataset({\n",
+       "     features: ['start', 'target'],\n",
+       "     num_rows: 1428\n",
        " })]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "datasets_for_finetuning = list(map(\n",
-    "    lambda ds, ds_conf: to_training_chronos_format(ds, ds_conf['H']), \n",
+    "    lambda ds, ds_conf: to_training_chronos_format(ds, ds_conf['H']).cast(expected_schema), \n",
     "    datasets_for_finetuning, \n",
     "    datasets_with_horizons))\n",
     "datasets_for_finetuning"
@@ -165,27 +183,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d1d15b81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['start', 'target'],\n",
+       "    num_rows: 6184\n",
+       "})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#datasets_for_finetuning = datasets.concatenate_datasets(datasets_for_finetuning)\n",
+    "datasets_for_finetuning = datasets.concatenate_datasets(datasets_for_finetuning)\n",
     "datasets_for_finetuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "f16be24f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ds, ds_conf in zip(datasets_for_finetuning, datasets_with_horizons):\n",
-    "    ArrowWriter(compression=\"lz4\").write_to_file(\n",
-    "        ds,\n",
-    "        path=Path.cwd()/ \"training\" / \"data\" / f\"{ds_conf['name']}.arrow\",\n",
-    "    )"
+    "ArrowWriter(compression=\"lz4\").write_to_file(\n",
+    "    datasets_for_finetuning,\n",
+    "    path=Path.cwd()/ \"training\" / \"data\" / \"training_dataset.arrow\",\n",
+    ")"
    ]
   },
   {
@@ -197,80 +228,6 @@
    "source": [
     "!python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7783e8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datasets_for_finetuning[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9d886b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "prueba = pd.DataFrame({'item_id': [0 for i in range(10)], \n",
-    "                       'timestamp': ['1970-01-31', '1970-02-28', '1970-03-31', '1970-04-30', '1970-05-31', \n",
-    "                                     '1972-04-30', '1972-05-31', '1972-06-30', '1972-07-31', '1972-08-31'], \n",
-    "                       'target': [76, 54, 32,56,43,11,37,41,75, 90]})\n",
-    "prueba"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44de543c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prueba = TimeSeriesDataFrame.from_data_frame(prueba)\n",
-    "prueba"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cdef192",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train, test = prueba.train_test_split(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "198316db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2156c1e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd94cb93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
