LoRA: Adapting evaluate.py

--- a/LoRA/scripts/set-up-datasets.ipynb
+++ b/LoRA/scripts/set-up-datasets.ipynb
@@ -228,6 +228,16 @@
    "source": [
     "!python training/train.py --config ./training/configs/chronos-t5-small-lora.yaml"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "908886d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python evaluation/evaluate.py evaluation/configs/zero-shot.yaml evaluation/results/chronos-t5-small-zero-shotprueba.csv --chronos-model-id \"./output/experimental_run/checkpoint-final\" --batch-size=32 --device=cuda:0 --num-samples 20"
+   ]
   }
  ],
  "metadata": {
