--- a/Covariates_Extension.ipynb
+++ b/Covariates_Extension.ipynb
@@ -767,10 +767,10 @@
     "# MAKE THE CUMULATIVE EXPLAINED VARIANCE PLOT\n",
     "plt.figure(figsize=(25, 5))\n",
     "plt.plot(np.insert(np.cumsum(pca.explained_variance_ratio_), 0, 0), 'o-', linewidth=2)\n",
-    "plt.title('CUMULATIVE EXPLAINED VARIANCE (ALL PCs)')\n",
     "plt.xticks(ticks=np.arange(1, pca.n_features_in_ + 1),\n",
     "           labels=[f'PC{i}' for i in range(1, pca.n_features_in_ + 1)],\n",
     "           rotation=45)\n",
+    "plt.title('CUMULATIVE EXPLAINED VARIANCE (ALL PCs)')\n",
     "plt.xlabel('Principal Components')\n",
     "plt.ylabel('Cumulative explained variance (%)')\n",
     "plt.grid()\n",
@@ -834,7 +834,10 @@
     "\n",
     "    plt.figure(figsize=(25, 5))\n",
     "    plt.bar(range(1, n_components + 1), variance_explained)\n",
-    "\n",
+    "    plt.title('CUMULATIVE EXPLAINED VARIANCE per Principal Component')\n",
+    "    plt.xlabel('Amount of Principal Components')\n",
+    "    plt.ylabel('Cumulative explained variance (%)')\n",
+    "    plt.grid()\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -1286,7 +1289,10 @@
     "    predictions=predictions,\n",
     "    item_ids=train_data.item_ids[0],\n",
     "    max_history_length=200,\n",
-    ");"
+    ")\n",
+    "plt.title('PCA Forecast')\n",
+    "plt.xlabel('date')\n",
+    "plt.ylabel('target')"
    ],
    "id": "4a2d291de6d1d17",
    "outputs": [
